  @startuml
'模板模式UML类图

abstract class GameTemplate {
  - difficulty : String
  - score : int
  - comboCount : int
  - particles : List<Particle>
  __
  + action()
  + crashCheckAction()
  + gameOver()
  __
  {abstract} + createEnemy() : MobEnemy
  + createBoss() : MobEnemy
  + getBossThreshold() : int
  + updateTimeBasedDifficulty()
}

class EasyGame {
  + createEnemy() : MobEnemy
  + getBossThreshold() : int
}

class NormalGame {
  - eliteEnemyProbability : double
  __
  + createEnemy() : MobEnemy
  + getBossThreshold() : int
  + updateTimeBasedDifficulty()
}

class HardGame {
  - eliteEnemyProbability : double
  - bossHp : int
  __
  + createEnemy() : MobEnemy
  + createBoss() : MobEnemy
  + getBossThreshold() : int
  + updateTimeBasedDifficulty()
  + onBossDefeated()
}

GameTemplate <|-- EasyGame
GameTemplate <|-- NormalGame
GameTemplate <|-- HardGame

note bottom of EasyGame
  简单：只生成普通敌机
  无Boss，难度固定
end note

note bottom of NormalGame
  普通：按概率生成敌机
  有Boss(300分)，难度递增
end note

note bottom of HardGame
  困难：精英概率高
  Boss血量递增，200分出现
end note

@enduml